# clide

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
CLIDE/: Package.swift
CLIDE/Sources/: CLIDEApp.swift
CLIDE/Sources/AppKit/: AppIcon.swift  LayoutEditorViewController.swift  MainWindowController.swift  NewSessionDialog.swift  SendToMenu.swift  SettingsPanel.swift  TerminalTabBar.swift  Theme.swift  WelcomeViewController.swift
CLIDE/Sources/Models/: AppSettings.swift  SavedSession.swift  TerminalLayout.swift  ToolConfig.swift
CLIDE/Sources/Terminal/: SessionManager.swift  TerminalSession.swift
CLIDE/Sources/Views/: SettingsView.swift  TabBar.swift  TerminalViewWrapper.swift  WelcomeView.swift  WorkspaceView.swift
CLIDE/Tests/: SettingsTests.swift
scripts/: build-dmg.sh  generate-icns.swift  icon-candidates.swift
src/: branding.test.ts  branding.ts  main.ts  styles.css  terminal-manager.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  pty.rs  session.rs  settings.rs
