[package]
name = "clide"
version = "0.1.0"
description = "CLIDE - Command Line Integrated Development Environment"
authors = ["Ben Hancock"]
edition = "2021"

[lib]
name = "clide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
portable-pty = "0.9.0"
uuid = { version = "1.23.1", features = ["v4"] }
parking_lot = "0.12.5"
tauri-plugin-updater = "2.10.1"

